--- a/MacPatch Admin Tools/MPAgentUpload/MPPKGUpload/Base.lproj/MainMenu.xib
+++ b/MacPatch Admin Tools/MPAgentUpload/MPPKGUpload/Base.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6246" systemVersion="14A361c" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6246" systemVersion="14A379a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6246"/>
@@ -58,7 +58,11 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="VOq-y0-SEH"/>
-                            <menuItem title="Preferences…" keyEquivalent="," id="BOF-NM-1cW"/>
+                            <menuItem title="Preferences…" keyEquivalent="," id="BOF-NM-1cW">
+                                <connections>
+                                    <action selector="showPreferencePanel:" target="Voe-Tx-rLC" id="2YH-lQ-mly"/>
+                                </connections>
+                            </menuItem>
                             <menuItem isSeparatorItem="YES" id="wFC-TO-SCJ"/>
                             <menuItem title="Services" id="NMo-om-nkz">
                                 <modifierMask key="keyEquivalentModifierMask"/>
@@ -694,13 +698,12 @@
                 </menuItem>
             </items>
         </menu>
-        <window title="MacPatch - Agent Uploader" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
+        <window title="MacPatch - Agent Uploader" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" restorable="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="547" height="459"/>
             <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
-            <value key="minSize" type="size" width="545" height="459"/>
-            <value key="maxSize" type="size" width="545" height="459"/>
+            <value key="minSize" type="size" width="547" height="459"/>
+            <value key="maxSize" type="size" width="547" height="459"/>
             <view key="contentView" id="EiT-Mj-1SZ">
                 <rect key="frame" x="0.0" y="0.0" width="547" height="459"/>
                 <autoresizingMask key="autoresizingMask"/>
@@ -747,6 +750,9 @@
                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     </textFieldCell>
+                                    <connections>
+                                        <binding destination="12j-su-5KB" name="value" keyPath="values.dServerAddress" id="kl9-43-6vn"/>
+                                    </connections>
                                 </textField>
                                 <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="h8b-KK-JsZ">
                                     <rect key="frame" x="59" y="14" width="358" height="22"/>
@@ -755,6 +761,15 @@
                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     </textFieldCell>
+                                    <connections>
+                                        <binding destination="12j-su-5KB" name="value" keyPath="values.dServerPort" id="vwv-BA-dVQ">
+                                            <dictionary key="options">
+                                                <string key="NSNoSelectionPlaceholder">2600</string>
+                                                <string key="NSNotApplicablePlaceholder">2600</string>
+                                                <string key="NSNullPlaceholder">2600</string>
+                                            </dictionary>
+                                        </binding>
+                                    </connections>
                                 </textField>
                                 <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="03L-Jf-krw">
                                     <rect key="frame" x="423" y="15" width="76" height="18"/>
@@ -762,6 +777,14 @@
                                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                         <font key="font" metaFont="system"/>
                                     </buttonCell>
+                                    <connections>
+                                        <binding destination="12j-su-5KB" name="value" keyPath="values.dServerSSL" id="lWm-vq-v2j">
+                                            <dictionary key="options">
+                                                <integer key="NSNoSelectionPlaceholder" value="1"/>
+                                                <integer key="NSNullPlaceholder" value="1"/>
+                                            </dictionary>
+                                        </binding>
+                                    </connections>
                                 </button>
                             </subviews>
                         </view>
@@ -938,6 +961,9 @@
                                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     </textFieldCell>
+                                    <connections>
+                                        <binding destination="12j-su-5KB" name="value" keyPath="values.dIdentity" id="YZS-n7-6bP"/>
+                                    </connections>
                                 </textField>
                                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yTU-fg-HjW">
                                     <rect key="frame" x="16" y="17" width="54" height="17"/>
@@ -953,6 +979,15 @@
                                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                                         <font key="font" metaFont="system"/>
                                     </buttonCell>
+                                    <connections>
+                                        <binding destination="12j-su-5KB" name="value" keyPath="values.dSignPKG" id="gis-jV-C2z">
+                                            <dictionary key="options">
+                                                <integer key="NSNoSelectionPlaceholder" value="0"/>
+                                                <integer key="NSNotApplicablePlaceholder" value="0"/>
+                                                <integer key="NSNullPlaceholder" value="0"/>
+                                            </dictionary>
+                                        </binding>
+                                    </connections>
                                 </button>
                             </subviews>
                         </view>
@@ -1060,6 +1095,7 @@ Gw
                 <font key="font" metaFont="system"/>
             </buttonCell>
         </button>
+        <userDefaultsController representsSharedInstance="YES" id="12j-su-5KB"/>
     </objects>
     <resources>
         <image name="ClearDot" width="16" height="16"/>
